--- a/abx-2l.html
+++ b/abx-2l.html
@@ -137,7 +137,7 @@
                                                 <div class="col-sm-3" style="border-right:1px solid #ddd;">
                                                     <h3 class="mega-menu-heading">Exchanger Cleaning</h3>
                                                     <ul class="list-unstyled style-list">
-                                                        <li><a href="abx-2l_02.html">AutoBox ABX-2L</a></li>
+                                                        <li><a href="abx-2l.html">AutoBox ABX-2L</a></li>
                                                         <li><a href="#">Bundle Blaster</a></li>
                                                         <li><a href="#">Sabertooth</a></li>
                                                         <li><a href="#">Rigid Lance Machine</a></li>
