--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                                 <div class="col-sm-3" style="border-right:1px solid #ddd;">
                                                     <h3 class="mega-menu-heading">Exchanger Cleaning</h3>
                                                     <ul class="list-unstyled style-list">
-                                                        <li><a href="abx-2l_02.html">AutoBox ABX-2L</a></li>
+                                                        <li><a href="abx-2l.html">AutoBox ABX-2L</a></li>
                                                         <li><a href="#">Bundle Blaster</a></li>
                                                         <li><a href="#">Sabertooth</a></li>
                                                         <li><a href="#">Rigid Lance Machine</a></li>
@@ -180,7 +180,7 @@
                                                     </ul>
                                                     <h3 class="mega-menu-heading">Concrete Hydro-demolition</h3>
                                                     <ul class="list-unstyled style-list">
-                                                        <li><a href="abx-2l.html">Blackhawk BHK-100</a></li>
+                                                        <li><a href="#">Blackhawk BHK-100</a></li>
                                                     </ul>
                                                 </div> 
                                             </div><!--/end row-->
