--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
   <link href='https://fonts.googleapis.com/css?family=Lato:400,100,300,300italic,100italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/main.css">
-  <!-- Scripts -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body id="home">
   
@@ -36,7 +33,7 @@
       </div>
     </div>
     <!-- Main Nav -->
-    <div class="row">
+    <div class="row main-nav">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -44,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span> 
           </button>
-          <a class="navbar-brand" href="index.html"><img src="img/stoneage_logo.png" class="img-responsive"></a>
+          <a class="navbar-brand" href="index.html"><img src="assets/img/stoneage_logo.png" class="img-responsive"></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
@@ -56,6 +53,53 @@
       </div>
     </div>
   </nav>
+
+  <!-- Carousel -->
+  <div id="homeSlides" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#homeSlides" data-slide-to="0" class="active"></li>
+      <li data-target="#homeSlides" data-slide-to="1"></li>
+      <li data-target="#homeSlides" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="assets/img/sliders/striker-hero-03.jpg" alt="Striker Remote Shotgunning">
+        <div class="carousel-caption">
+          <h3>Striker SKR-100</h3>
+          <p>Protable remote shotgunning system</p>
+        </div>
+      </div>
+      <div class="item">
+        <img src="assets/img/sliders/warthog-hero-03.jpg" alt="Warthog sewer jetting nozzles">
+        <div class="carousel-caption">
+          <h3>Warthog WGR Magnum</h3>
+          <p>The world's most durable sewer nozzles</p>
+        </div>
+      </div>
+      <div class="item">
+        <img src="assets/img/sliders/spincat-hero-01.jpg" alt="Warthog sewer jetting nozzles">
+        <div class="carousel-caption">
+          <h3>SpinCat SC-287</h3>
+          <p>Downhole rotary wash tools</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Controls -->
+    <a class="left carousel-control" href="#homeSlides" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#homeSlides" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+  <!-- End Carousel -->
+
 
   <section class="jumbotron text-center">
     <h1>Company</h1> 
@@ -143,7 +187,7 @@
       </div>
 
       <div class="col-sm-3">
-        <a href="index.html"><img class="footer-logo" src="img/stoneage-negative.png" alt="StoneAge - Engineering the Power of Water"></a>
+        <a href="index.html"><img class="footer-logo" src="assets/img/stoneage-negative.png" alt="StoneAge - Engineering the Power of Water"></a>
       </div>
 
     </div>
@@ -164,7 +208,14 @@
   </div>
 
 
-<!-- Effects, etc. -->
+
+
+
+
+<!-- Scripts -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<!-- Smooth page up -->
 <script>
 $(document).ready(function(){
   // Add smooth scrolling to all links in navbar + footer link
