--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <h2>Waterblast Equipment for Industrial Cleaning</h2>
         <p><span class="bold">StoneAge, Inc. is one of the world’s leading manufacturers of high-pressure waterblast tools and automated equipment for industrial companies and contractors worldwide.</span> Our products have been an industry standard for over 30 years and we continue to lead the way with automated equipment designs that promote safety and advance productivity for a wide variety of applications.</p>
         <button class="btn">Contact Our Team</button>
-        <button class="btn">Company History</button>
+        <button class="btn">About Our Company</button>
       </div>
       <div class="col-sm-5 col-sm-offset-1">
         <div class="embed-responsive embed-responsive-16by9">
@@ -161,21 +161,21 @@
           </div>
           <div class="col-md-4 col-sm-4">
             <div class="product-thumbnails">
-              <img class="img-thumbnail" src="assets/img/thumb/striker.jpg" alt="">
+              <img class="img-thumbnail" src="assets/img/thumb/abx-2l.jpg" alt="">
               <a class="btn" href="#">read more +</a>
               <div class="caption">
-                <h4><a href="#">Striker SKR-100</a></h4>
-                <p>The industry's first portable remote shotgunning system</p>
+                <h4><a href="#">AutoBox ABX-2L</a></h4>
+                <p>Automated flex-lancing of heat exchanger tubes</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 col-sm-4">
             <div class="product-thumbnails">
-              <img class="img-thumbnail" src="assets/img/thumb/striker.jpg" alt="">
+              <img class="img-thumbnail" src="assets/img/thumb/abx-500.jpg" alt="">
               <a class="btn" href="#">read more +</a>
               <div class="caption">
-                <h4><a href="#">Striker SKR-100</a></h4>
-                <p>The industry's first portable remote shotgunning system</p>
+                <h4><a href="#">AutoBox ABX-500</a></h4>
+                <p>Hands-free hose handling for high pressure pipe  &amp; vessel cleaning</p>
               </div>
             </div>
           </div>
@@ -185,31 +185,31 @@
         <div class="row margin-bottom-20">
           <div class="col-md-4 col-sm-4">
             <div class="product-thumbnails">
-              <img class="img-thumbnail" src="assets/img/thumb/striker.jpg" alt="">
+              <img class="img-thumbnail" src="assets/img/thumb/bundle-blaster.jpg" alt="">
               <a class="btn" href="#">read more +</a>
               <div class="caption">
-                <h4><a href="#">Striker SKR-100</a></h4>
-                <p>The industry's first portable remote shotgunning system</p>
+                <h4><a href="#">Bundle Blaster</a></h4>
+                <p>Shell-side heat exchanger bundle cleaning</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 col-sm-4">
             <div class="product-thumbnails">
-              <img class="img-thumbnail" src="assets/img/thumb/striker.jpg" alt="">
+              <img class="img-thumbnail" src="assets/img/thumb/blackhawk.jpg" alt="">
               <a class="btn" href="#">read more +</a>
               <div class="caption">
-                <h4><a href="#">Striker SKR-100</a></h4>
-                <p>The industry's first portable remote shotgunning system</p>
+                <h4><a href="#">Blackhawk BHK-100</a></h4>
+                <p>Concrete hydrodemolition and scarification system</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 col-sm-4">
             <div class="product-thumbnails">
-              <img class="img-thumbnail" src="assets/img/thumb/striker.jpg" alt="">
+              <img class="img-thumbnail" src="assets/img/thumb/btc.jpg" alt="">
               <a class="btn" href="#">read more +</a>
               <div class="caption">
-                <h4><a href="#">Striker SKR-100</a></h4>
-                <p>The industry's first portable remote shotgunning system</p>
+                <h4><a href="#">Boiler Tube Cleaner</a></h4>
+                <p>Automated, no-entry package boiler tube cleaning</p>
               </div>
             </div>
           </div>
@@ -231,23 +231,15 @@
       
     </div>
   </section>
-
-<!--
-  <footer class="container-fluid text-center">
-    <a href="#home" title="To Top">
-      <span class="glyphicon glyphicon-chevron-up"></span>
-    </a>
-    <p>Bootstrap Theme Made By <a href="http://www.w3schools.com" title="Visit w3schools">www.w3schools.com</a></p> 
-  </footer>
--->
-
-  <!--=== Footer Version 1 ===-->
+      
   <footer>
-    <div class="container">
+    <div class="container padding-tb-30">
 
-      <div class="col-sm-3">
-        <h2>Product Support</h2>
-        <ul>
+      <div class="col-sm-3 padding-right-60">
+        <div class="section-heading">
+          <h3>Product Support</h3>
+        </div>
+        <ul class="list-unstyled link-list">
           <li><a href="#">Product Catalogs</a><i class="fa fa-angle-right"></i></li>
           <li><a href="#">Technical Reference</a><i class="fa fa-angle-right"></i></li>
           <li><a href="#">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
@@ -256,8 +248,10 @@
         </ul>
       </div>
 
-      <div class="col-sm-3">
-        <h2>About Us</h2>
+      <div class="col-sm-3 padding-right-60">
+        <div class="section-heading">
+          <h3>About StoneAge</h3>
+        </div>
         <ul class="list-unstyled link-list">
           <li><a href="#">Our Story</a><i class="fa fa-angle-right"></i></li>
           <li><a href="#">Careers</a><i class="fa fa-angle-right"></i></li>
@@ -266,8 +260,10 @@
         </ul>
       </div>
 
-      <div class="col-sm-3">
-        <h2>Contact Us</h2>
+      <div class="col-sm-3 map-bg padding-right-60">
+        <div class="section-heading">
+          <h3>Contact Us</h3>
+        </div>
         <address>
             466 South Skylane Drive <br />
             Durango, CO 81303 <br />
@@ -286,13 +282,14 @@
 
   <div class="fluid-container copyright">
     <div class="container">
-      <div class="col-md-6">
+      <div class="col-md-11">
         <p>2015 &copy; All Rights Reserved. <a href="#">Patents &amp; Trademarks</a> | <a href="#">Terms of Sale</a>
         </p>
       </div>
-      <div class="col-md-6">
-        <a href="#home" title="To Top">
-          <span class="glyphicon glyphicon-chevron-up"></span>
+      <div class="col-md-1">
+        <a href="#home" title="To Top" class="to-top">
+          <span class="glyphicon glyphicon-chevron-up"></span><br>
+          Top of Page
         </a>
       </div>
     </div>
