remote clone test

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="item active">
         <img src="assets/img/sliders/striker-hero-03.jpg" alt="Striker Remote Shotgunning">
         <div class="carousel-caption">
-          <h2>Striker SKR-100</h2>
+          <h2>I AM REMOTE</h2>
           <h4>Portable remote shotgunning system</h4>
         </div>
       </div>
