--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#about">Waterblast Tools &amp;</br>Equipment</a></li>
+            <li><a href="#about">Waterblast Tools &amp;<br/>Equipment</a></li>
             <li><a href="#services">Sewer Jetting &amp;<br/>Hydro-X Nozzles</a></li>
             <li><a href="#portfolio">Downhole<br/>Wash Tools</a></li>
           </ul>
@@ -73,7 +73,7 @@
       <div class="item active">
         <img src="assets/img/sliders/striker-hero-03.jpg" alt="Striker Remote Shotgunning">
         <div class="carousel-caption">
-          <h2>I AM REMOTE</h2>
+          <h2>Striker SKR-100</h2>
           <h4>Portable remote shotgunning system</h4>
         </div>
       </div>
@@ -125,9 +125,9 @@
         <p><span class="bold">StoneAge, Inc. is one of the world’s leading manufacturers of high-pressure waterblast tools and automated equipment for industrial companies and contractors worldwide.</span> Our products have been an industry standard for over 30 years and we continue to lead the way with automated equipment designs that promote safety and advance productivity for a wide variety of applications.</p>
       </div>
       <aside class="col-sm-3 offset-sm-1 padding-tb-30 cta">
-        <p class="point"><span>Need help with a job?</span><br>
+        <p class="point"><span>Need help with a job?</span><br/>
         <a href="#">Contact Our Team of Experts</a></p>
-        <p class="point late"><span>Want to know more about us?</span><br>
+        <p class="point late"><span>Want to know more about us?</span><br/>
         <a href="#">Read About Our Company</a></p>
       </aside>
     </div>
@@ -142,7 +142,7 @@
         <div class="section-heading">
           <h2>Events</h2>
         </div>
-        <img src="assets/img/dealer-days-2015.jpg" class="img-responsive" />
+        <img src="assets/img/dealer-days-2015.jpg" class="img-responsive"/>
         <div class="caption">
         <h4><a href="#">2015 Dealer Days</a></h4>
         <p>Join Authorized Waterblast Dealers at StoneAge headquarters for two days of training, demonstrations, and discussions.</p>
@@ -216,7 +216,7 @@
               <a class="btn" href="#">read more +</a>
               <div class="caption">
                 <h4><a href="#">Boiler Tube Cleaner</a></h4>
-                <p>Automated, no-entry package boiler tube cleaning</p>
+                <p>Automated package boiler tube cleaning</p>
               </div>
             </div>
           </div>
@@ -254,7 +254,7 @@
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         <div class="testimonial">
-          <p>"We recognize StoneAge as a long term business partner.<br>
+          <p>"We recognize StoneAge as a long term business partner.<br/>
 The products we purchase are of the highest specification from a technical, quality, and health &amp; safety perspective."</p>
           <p class="attrib">- Andrew Dobson, Veolia</p>
           <img src="assets/img/logo_veolia.png" alt="Veolia">
