Media fixes - big screen

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
               <a class="btn" href="#">read more +</a>
               <div class="caption">
                 <h4><a href="#">AutoBox ABX-500</a></h4>
-                <p>Hands-free hose handling for high pressure pipe  &amp; vessel cleaning</p>
+                <p>Hands-free hose handling for high pressure pipe cleaning</p>
               </div>
             </div>
           </div>
