Start wb landing

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#about">Waterblast Tools &amp;<br/>Equipment</a></li>
+            <li><a href="waterblast-tools-automated-equipment.html">Waterblast Tools &amp;<br/>Equipment</a></li>
             <li><a href="#services">Sewer Jetting &amp;<br/>Hydro-X Nozzles</a></li>
             <li><a href="#portfolio">Downhole<br/>Wash Tools</a></li>
           </ul>
