--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="stylesheet" href="assets/css/media.css">
 </head>
-<body id="wb-landing">
+<body id="wb landing">
   
   <nav class="navbar navbar-default navbar-fixed-top">
     <!-- Utilities Nav -->
@@ -60,7 +60,7 @@
   </nav>
 
   <!-- Big WB nav -->
-  <section class="fluid-container landing-nav">
+  <div class="row landing-nav">
     <div class="col-sm-6 landing-nav-btn automated">
       <a href="#"><i class="fa fa-automobile"></i>
         <h2>Automated</h2>
@@ -74,19 +74,98 @@
         <h5>Waterblast tools and accessories</h5>
       </a>
     </div>
-  </section>
+  </div>
   <!-- End Big WB nav -->
   
   <!-- Automated Equip -->
-  <div>
-    <h1>Automated Waterblast Equipment and Systems</h1>
-  </div>
+  <section class="wb-automated">
+    <div class="row">
+      <div class="col-sm-6 col-sm-push-6 heading-img">
+        <img src="assets/img/striker-big.jpg" class="img-responsive" alt="Striker Remote Shotgunning System for Hydroblasting"/>
+      </div>
+      <div class="col-sm-6 col-sm-pull-6 heading">
+        <h1>Automated Waterblast Equipment and Systems</h1>
+
+      </div>
+    </div>
+    
+    <!-- Automated Product List -->
+    <div id="automated" class="row">
+      <div class="container padding-tb-30">
+        <!-- Row 1 -->
+        <div class="row padding-tb-30">
+          <div class="col-sm-4 product-list">
+            <div class="list-group">
+              <a href="#" class="list-group-item active">Automated Exchanger Cleaning</h4>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+            </div>
+          </div>
+          <div class="col-sm-4 product-list">
+            <div class="list-group">
+              <a href="#" class="list-group-item active">Automated Exchanger Cleaning</h4>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+            </div>
+          </div><div class="col-sm-4 product-list">
+            <div class="list-group">
+              <a href="#" class="list-group-item active">Automated Exchanger Cleaning</h4>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+            </div>
+          </div>
+        <!-- Row 2 -->
+        <div class="row padding-tb-30">
+          <div class="col-sm-4 product-list">
+            <div class="list-group">
+              <a href="#" class="list-group-item active">Automated Exchanger Cleaning</h4>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+            </div>
+          </div><div class="col-sm-4 product-list">
+            <div class="list-group">
+              <a href="#" class="list-group-item active">Automated Exchanger Cleaning</h4>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+            </div>
+          </div><div class="col-sm-4 product-list">
+            <div class="list-group">
+              <a href="#" class="list-group-item active">Automated Exchanger Cleaning</h4>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Automated Product List -->
+  </section>
   <!-- End Automated Equip -->
   
   <!-- Rotary Tools -->
-  <div>
-    <h1>Rotary Waterblast Tools and Accessories</h1>
-  </div>
+  <section id="rotary" class="row wb-rotary">
+    <div class="col-sm-6 heading-img">
+      <img src="assets/img/striker-big.jpg" class="img-responsive" alt="Striker Remote Shotgunning System for Hydroblasting"/>
+    </div>
+    <div class="col-sm-6 heading">
+      <h1>Rotary Waterblast Tools and Accessories</h1>
+    </div>
+    
+    <div id="automated">
+    </div>
+  </section>
   <!-- End Rotary Tools -->
   
   
