Landing page progress

--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="stylesheet" href="assets/css/media.css">
 </head>
-<body id="wb landing">
+<body id="top" class="wb landing">
   
   <nav class="navbar navbar-default navbar-fixed-top">
     <!-- Utilities Nav -->
@@ -96,8 +96,8 @@
         <div class="row padding-tb-30">
           <div class="col-sm-4 product-list">
             <div class="list-group">
-              <a href="#" class="list-group-item active">Automated Exchanger Cleaning</h4>
-              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item header">Automated Exchanger Cleaning</h4>
+              <a href="#" class="list-group-item">AutoBox ABX-2L <span class="label label-warning">New for 2016</span></a>
               <a href="#" class="list-group-item">AutoBox ABX-2L</a>
               <a href="#" class="list-group-item">AutoBox ABX-2L</a>
               <a href="#" class="list-group-item">AutoBox ABX-2L</a>
@@ -105,7 +105,7 @@
           </div>
           <div class="col-sm-4 product-list">
             <div class="list-group">
-              <a href="#" class="list-group-item active">Automated Exchanger Cleaning</h4>
+              <a href="#" class="list-group-item header">Automated Exchanger Cleaning</h4>
               <a href="#" class="list-group-item">AutoBox ABX-2L</a>
               <a href="#" class="list-group-item">AutoBox ABX-2L</a>
               <a href="#" class="list-group-item">AutoBox ABX-2L</a>
@@ -113,7 +113,7 @@
             </div>
           </div><div class="col-sm-4 product-list">
             <div class="list-group">
-              <a href="#" class="list-group-item active">Automated Exchanger Cleaning</h4>
+              <a href="#" class="list-group-item header">Automated Exchanger Cleaning</h4>
               <a href="#" class="list-group-item">AutoBox ABX-2L</a>
               <a href="#" class="list-group-item">AutoBox ABX-2L</a>
               <a href="#" class="list-group-item">AutoBox ABX-2L</a>
@@ -124,7 +124,7 @@
         <div class="row padding-tb-30">
           <div class="col-sm-4 product-list">
             <div class="list-group">
-              <a href="#" class="list-group-item active">Automated Exchanger Cleaning</h4>
+              <a href="#" class="list-group-item header">Automated Exchanger Cleaning</h4>
               <a href="#" class="list-group-item">AutoBox ABX-2L</a>
               <a href="#" class="list-group-item">AutoBox ABX-2L</a>
               <a href="#" class="list-group-item">AutoBox ABX-2L</a>
@@ -132,7 +132,7 @@
             </div>
           </div><div class="col-sm-4 product-list">
             <div class="list-group">
-              <a href="#" class="list-group-item active">Automated Exchanger Cleaning</h4>
+              <a href="#" class="list-group-item header">Automated Exchanger Cleaning</h4>
               <a href="#" class="list-group-item">AutoBox ABX-2L</a>
               <a href="#" class="list-group-item">AutoBox ABX-2L</a>
               <a href="#" class="list-group-item">AutoBox ABX-2L</a>
@@ -140,7 +140,88 @@
             </div>
           </div><div class="col-sm-4 product-list">
             <div class="list-group">
-              <a href="#" class="list-group-item active">Automated Exchanger Cleaning</h4>
+              <a href="#" class="list-group-item header">Automated Exchanger Cleaning</h4>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="to-top">
+        <a href="#top" title="To Top">
+          To Top <i class="fa fa-caret-up"></i>
+        </a>
+      </div>
+    </div>
+    <!-- End Automated Product List -->
+  </section>
+  <!-- End Automated Equip -->
+  
+  <!-- Rotary Tools -->
+  <section id="rotary" class="wb-rotary">
+    <div class="row">
+      <div class="col-sm-6 heading-img">
+        <img src="assets/img/striker-big.jpg" class="img-responsive" alt="Striker Remote Shotgunning System for Hydroblasting"/>
+      </div>
+      <div class="col-sm-6 heading">
+        <h1>Rotary Waterblast Tools and Accessories</h1>
+      </div>
+    </div>
+    
+    <!-- Rotary Product List -->
+    <div id="automated" class="row">
+      <div class="container padding-tb-30">
+        <!-- Row 1 -->
+        <div class="row padding-tb-30">
+          <div class="col-sm-4 product-list">
+            <div class="list-group">
+              <a href="#" class="list-group-item header">Automated Exchanger Cleaning</h4>
+              <a href="#" class="list-group-item">AutoBox ABX-2L <span class="label label-warning">New for 2016</span></a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+            </div>
+          </div>
+          <div class="col-sm-4 product-list">
+            <div class="list-group">
+              <a href="#" class="list-group-item header">Automated Exchanger Cleaning</h4>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+            </div>
+          </div><div class="col-sm-4 product-list">
+            <div class="list-group">
+              <a href="#" class="list-group-item header">Automated Exchanger Cleaning</h4>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+            </div>
+          </div>
+        <!-- Row 2 -->
+        <div class="row padding-tb-30">
+          <div class="col-sm-4 product-list">
+            <div class="list-group">
+              <a href="#" class="list-group-item header">Automated Exchanger Cleaning</h4>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+            </div>
+          </div><div class="col-sm-4 product-list">
+            <div class="list-group">
+              <a href="#" class="list-group-item header">Automated Exchanger Cleaning</h4>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+              <a href="#" class="list-group-item">AutoBox ABX-2L</a>
+            </div>
+          </div><div class="col-sm-4 product-list">
+            <div class="list-group">
+              <a href="#" class="list-group-item header">Automated Exchanger Cleaning</h4>
               <a href="#" class="list-group-item">AutoBox ABX-2L</a>
               <a href="#" class="list-group-item">AutoBox ABX-2L</a>
               <a href="#" class="list-group-item">AutoBox ABX-2L</a>
@@ -150,21 +231,7 @@
         </div>
       </div>
     </div>
-    <!-- Automated Product List -->
-  </section>
-  <!-- End Automated Equip -->
-  
-  <!-- Rotary Tools -->
-  <section id="rotary" class="row wb-rotary">
-    <div class="col-sm-6 heading-img">
-      <img src="assets/img/striker-big.jpg" class="img-responsive" alt="Striker Remote Shotgunning System for Hydroblasting"/>
-    </div>
-    <div class="col-sm-6 heading">
-      <h1>Rotary Waterblast Tools and Accessories</h1>
-    </div>
-    
-    <div id="automated">
-    </div>
+    <!-- End Rotary Product List -->
   </section>
   <!-- End Rotary Tools -->
   
@@ -225,8 +292,8 @@
         </p>
       </div>
       <div class="col-md-1">
-        <a href="#home" title="To Top" class="to-top">
-          <span class="glyphicon glyphicon-chevron-up"></span>
+        <a href="#top" title="To Top" class="to-top">
+          <i class="fa fa-caret-up"></i>
         </a>
       </div>
     </div>
