--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="stylesheet" href="assets/css/media.css">
 </head>
-<body id="home">
+<body id="top" class="home landing">
   
   <nav class="navbar navbar-default navbar-fixed-top">
     <!-- Utilities Nav -->
@@ -351,7 +351,7 @@ The products we purchase are of the highest specification from a technical, qual
         </p>
       </div>
       <div class="col-md-1">
-        <a href="#home" title="To Top" class="to-top">
+        <a href="#top" title="To Top" class="to-top">
           <span class="glyphicon glyphicon-chevron-up"></span>
         </a>
       </div>
