WB landing done

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ The products we purchase are of the highest specification from a technical, qual
         </p>
       </div>
       <div class="col-md-1">
-        <a href="#top" title="To Top" class="to-top">
+        <a href="#top" title="To Top">
           <span class="glyphicon glyphicon-chevron-up"></span>
         </a>
       </div>
