--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -69,7 +69,7 @@
         </a>
       </div>
       <div class="col-sm-6 landing-nav-btn rotary">
-        <a href="#">
+        <a href="#rotary">
           <i class="fa fa-bicycle"></i>
           <h2>Rotary</h2>
           <h5>Waterblast tools and accessories</h5>
@@ -164,7 +164,7 @@
         </div>
         <div class="to-top">
           <a href="#top" title="To Top">
-            To Top <i class="fa fa-caret-up"></i>
+            Top <i class="fa fa-caret-up"></i>
           </a>
         </div>
       </div>
