Product page start

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
   </nav>
 
   <!-- Carousel -->
+  <div class="containter-fluid">
   <div id="homeSlides" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -102,6 +103,7 @@
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
+  </div>
   </div>
   <!-- End Carousel -->
 
