--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -108,7 +108,7 @@
           <div class="col-sm-4 product-list">
             <div class="list-group">
               <a href="#" class="list-group-item header">Automated Exchanger Cleaning</h4>
-              <a href="#" class="list-group-item">AutoBox ABX-2L<span class="label label-info">Flex Lancing</span></a>
+              <a href="waterblast-automation/autobox-abx-2l.html" class="list-group-item">AutoBox ABX-2L<span class="label label-info">Flex Lancing</span></a>
               <a href="#" class="list-group-item">Bundle Blaster<span class="label label-info">Shell Side Cleaning</span></a>
               <a href="#" class="list-group-item">Sabertooth<span class="label label-info">Flex Lancing</span></a>
               <a href="#" class="list-group-item">Rigid Lance Machine<span class="label label-info">Rigid Lancing</span></a>
