Product page fixes

--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -231,11 +231,14 @@ or plastic to withstand corrosive environments</li>
             </div>
             <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
               <div class="panel-body">
-                <p><i class="fa fa-file-text-o"></i> &nbsp;<a href="#">ABX-2L Data Sheet</a></p>
-                <p><i class="fa fa-file-text-o"></i> &nbsp;<a href="#">ABX-2L User Manual (6mm)</a></p>
-                <p><i class="fa fa-file-text-o"></i> &nbsp;<a href="#">ABX-2L-V2 User Manual (8mm)</a></p>
-                <p><i class="fa fa-file-text-o"></i> &nbsp;<a href="#">ABX-2L-V2 Upgrade Guide</a></p>
-                <p class="margin-bottom-20"><i class="fa fa-file-text-o"></i> &nbsp;<a href="#">ABX-2L-V2 House Guide Upgrade</a></p>
+                <ul>
+                  <li><a href="#"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L Data Sheet</a></li>
+                  <li><a href="#"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L User Manual (6mm)</a></li>
+                  <li><a href="#"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L User Manual (8mm)</a></li>
+                  <li><a href="#"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L Upgrade Guide (6mm to 8mm)</a></li>
+                  <li><a href="#"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L House Guide Upgrade</a></li>
+                  <li><a href="#"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L Parts Breakdown</a></li>
+                </ul>
                 <p><strong>Our expert staff is available Monday through Friday 8:AM - 5:PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
                 <h4>Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
               </div>
