--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -301,6 +301,50 @@ or plastic to withstand corrosive environments</li>
     </div>
   </section>
   <!-- Product extras -->
+
+  <!-- Product Testimonials -->
+  <div class="row product-testimonials">
+    <div id="carousel-product" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#carousel-product" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-product" data-slide-to="1"></li>
+      </ol>
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <div class="insight">
+            <img src="../assets/img/quote.png" alt="quote" class="quote" />
+            <p>The ABX-2L is the most versatile and reliable flex lancing system we've ever used.</p>
+            <p class="signed">-Evergreen Environmental Services</p>
+          </div>
+          <img src="../assets/img/sliders/abx-2l-operator.jpg" alt="ABX-2L cleaning small tube exchanger">
+        </div>
+
+        <div class="item">
+          <div class="insight">
+            <img src="../assets/img/quote.png" alt="quote" class="quote" />
+            <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
+            <p class="signed">-Water Works Industrial Services</p>
+          </div>
+          <img src="../assets/img/sliders/abx-2l-big-exchanger.jpg" alt="...">
+        </div>
+
+      </div><!-- End wrapper -->
+
+      <!-- Controls -->
+      <a class="left carousel-control" href="#carousel-product" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#carousel-product" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+    <!--=== End Product Testimonials ===-->
       
   <!-- Footer CTA -->
   <div class="row footer-cta">
