--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -115,7 +115,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge ABX-2L&body=Check out the StonaAge AutoBox ABX-2L automated flex lancing system:  http://stoneagetools.com">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge Automated Flex Lancing&body=Check out the StoneAge AutoBox ABX-2L automated flex lancing system:  http://stoneagetools.com/waterblast-automation/autobox-abx-2l.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
@@ -283,11 +283,6 @@ or plastic to withstand corrosive environments</li>
 
           <h2>Productive automated cleaning of heat exchanger and evaporator tubes</h2>
           <p>When paired with StoneAge Banshee rotary tube cleaning nozzles and lightweight positioner, the AutoBox ABX-2L offers safe and efficient tube cleaning in the harshest exchanger environments.</p>
-
-<!--
-        <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.”</p>
-        <p>Mark Blanchard of Water Works Industrial Services</p>
--->
       </div>
       <div class="col-md-4 col-md-offset-1">
         <table>
