--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </nav>
 
   <!-- Carousel -->
-  <div class="containter-fluid">
+  <div class="containter-fluid home-slider">
   <div id="homeSlides" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
