--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -312,7 +312,7 @@ or plastic to withstand corrosive environments</li>
           <div class="insight">
             <img src="../assets/img/quote.png" alt="quote" class="quote" />
             <p>The ABX-2L is the most versatile and reliable flex lancing system we've ever used.</p>
-            <p class="signed">-Evergreen Environmental Services</p>
+            <p class="signed">-Doug McGee,<br/>Evergreen Environmental Services</p>
           </div>
           <img src="../assets/img/sliders/abx-2l-operator.jpg" alt="ABX-2L cleaning small tube exchanger">
         </div>
@@ -321,7 +321,7 @@ or plastic to withstand corrosive environments</li>
           <div class="insight">
             <img src="../assets/img/quote.png" alt="quote" class="quote" />
             <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
-            <p class="signed">-Water Works Industrial Services</p>
+            <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
           </div>
           <img src="../assets/img/sliders/abx-2l-big-exchanger.jpg" alt="...">
         </div>
