Contact page progress

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="stylesheet" href="assets/css/media.css">
 </head>
-<body id="top" class="home landing">
+<body id="top" class="home">
   
   <nav class="navbar navbar-default navbar-fixed-top">
     <!-- Utilities Nav -->
@@ -29,7 +29,7 @@
         </div>
         <div class="col-sm-8 utils">
           <ul class="list-inline">
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
             <li><a href="#">Request a Catalog</a></li>
             <li><a href="#">Portal Login</a></li>
             <li><a href="#"><i class="search fa fa-search search-button"></i></a></li>
