--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -32,7 +32,7 @@
         </div>
         <div class="col-sm-8 utils">
           <ul class="list-inline">
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="../contact.html">Contact Us</a></li>
             <li><a href="#">Request a Catalog</a></li>
             <li><a href="#">Portal Login</a></li>
             <li><a href="#"><i class="search fa fa-search search-button"></i></a></li>
