Contact page progress

--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
       <div id="map-canvas"></div>
      
       <!-- Nav tabs -->
-      <div class="contact-nav">
+      <div class="contact-nav container">
         <ul class="nav nav-tabs" role="tablist">
           <li role="presentation" class="active"><a href="#contact-tab" aria-controls="contact-tab" role="tab" data-toggle="tab">Contact</a></li>
           <li role="presentation"><a href="#ordering-tab" aria-controls="ordering-tab" role="tab" data-toggle="tab">Ordering</a></li>
