Contact page cleanup

--- a/contact.html
+++ b/contact.html
@@ -135,7 +135,7 @@
                 <p><a href="#contact-tab" data-toggle="tab">Contact a dealer in your region</a> to purchase.</p>
               </div>
               <div class="col-sm-3 contact-method">
-                <h3 class="bold">Downhole Tools Sales</h3>
+                <h3>Downhole Tools Sales</h3>
                 <p><a href="#intl-tab" data-target="#intl-tab" data-toggle="tab">Contact a dealer in your region</a> to purchase.</p>
               </div>
             </div>
