Contact page messing around

--- a/contact.html
+++ b/contact.html
@@ -407,7 +407,7 @@
           <div role="tabpanel" class="tab-pane" id="support-tab">
             <div class="row">
               <div class="section-heading">
-                <h2 class="bold">Repairs</h2>
+                <h2 class="bold slab">Repairs</h2>
               </div>
               <h3>When sending equipment in for repair, please be sure to:</h3>
               <ol>
@@ -419,7 +419,7 @@
               </ol>
               <p>The tool will be evaluated by a repair technician upon arrival and you will be contacted by StoneAge with a repair estimate. A PO is required to proceed with the repair.</p>
               <div class="section-heading">
-                <h2 class="bold">Returns</h2>
+                <h2 class="bold slab">Returns</h2>
               </div>
               <h3>When sending a tool back for a return, please be sure to:</h3>
               <ol>
