--- a/index.html
+++ b/index.html
@@ -23,8 +23,18 @@
       <div class="container">
         <div class="col-sm-4">
           <ul class="list-inline">
-            <li><a><i class="fa fa-globe"></i> Languages</a></li>
-            <li><a href="#"><i class="fa fa-share-alt"></i> Social Media</a></li>
+<!--            <li><a><i class="fa fa-globe"></i> Languages</a></li>-->
+            <li>
+              <div class="dropdown social-share">
+                <a href="#" class="dropdown-toggle" type="button" data-toggle="dropdown"><i class="fa fa-share-alt"></i> Social Media</a>
+                <ul class="dropdown-menu">
+                  <li><a href="https://www.youtube.com/channel/UCdK135J8Z9uHdG67eJ08LyA" target="_blank"><i class="fa fa-youtube-play"></i> YouTube</a></li>
+                  <li><a href="https://www.facebook.com/Stoneagetools/" target="_blank"><i class="fa fa-facebook-official"></i> Facebook</a></li>
+                  <li><a href="https://www.linkedin.com/company/stone-age-waterblast-tools" target="_blank"><i class="fa fa-linkedin-square"></i> LinkedIn</a></li>
+                  <li><a href="https://twitter.com/stoneagetools" target="_blank"><i class="fa fa-twitter"></i> Twitter</a></li>
+                </ul>
+              </div>
+            </li>
           </ul>
         </div>
         <div class="col-sm-8 utils">
