--- a/waterblast-automation/striker-remote-shotgunning.html
+++ b/waterblast-automation/striker-remote-shotgunning.html
@@ -78,7 +78,7 @@
       <ul class="breadcrumb">
         <li><a href="../index.html">Home</i></a></li>
         <li><a href="../waterblast-tools-automated-equipment.html">Waterblast Tools &amp; Equipment</a></li>
-        <li class="active">AutoBox ABX-2L</li>
+        <li class="active">Striker SKR-100</li>
       </ul> 
     </div>
   </div>
@@ -93,25 +93,21 @@
         <div class="ms-showcase2-template">
           <div class="master-slider ms-skin-default" id="masterslider">
             <div class="ms-slide">
-              <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/abx-2l-01.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-abx-2l-01.jpg" alt="thumb">
-                <a data-type="video" href="https://www.youtube.com/embed/jCTBlGM324Q"> </a>
+              <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/striker-01.jpg" alt="StoneAge Striker remote shotgunning system">
+              <img class="ms-thumb" src="../assets/img/product/thumb-striker-01.jpg" alt="thumb">
+                <a data-type="video" href="https://www.youtube.com/embed/EcVIT-LdfYg"> </a>
             </div>
             <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/abx-2l-02.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-abx-2l-02.jpg" alt="thumb">
+              <img src="../assets/img/blank.gif" data-src="../assets/img/product/striker-02.jpg" alt="StoneAge Striker remote hydroblasting">
+              <img class="ms-thumb" src="../assets/img/product/thumb-striker-02.jpg" alt="thumb">
             </div>
             <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/abx-2l-03.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-abx-2l-03.jpg" alt="thumb">
+              <img src="../assets/img/blank.gif" data-src="../assets/img/product/striker-03.jpg" alt="StoneAge Striker automated hydroblasting">
+              <img class="ms-thumb" src="../assets/img/product/thumb-striker-03.jpg" alt="thumb">
             </div>
             <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/abx-2l-04.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-abx-2l-04.jpg" alt="thumb">
-            </div>
-            <div class="ms-slide">
-              <img src="../assets/img/blank.gif" data-src="../assets/img/product/abx-2l-05.jpg" alt="lorem ipsum dolor sit">
-              <img class="ms-thumb" src="../assets/img/product/thumb-abx-2l-05.jpg" alt="thumb">
+              <img src="../assets/img/blank.gif" data-src="../assets/img/product/striker-04.jpg" alt="StoneAge Striker automated surface preparation">
+              <img class="ms-thumb" src="../assets/img/product/thumb-striker-04.jpg" alt="thumb">
             </div>
           </div>
         </div>
@@ -121,17 +117,21 @@
       <!-- Product Info -->
       <div class="col-md-6 padding-left-60">
         <div class="product-heading">
-          <h1>AutoBox ABX-2L</h1>
+          <h1>Striker</h1>
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge Automated Flex Lancing&body=Check out the StoneAge AutoBox ABX-2L automated flex lancing system:  http://stoneagetools.com/waterblast-automation/autobox-abx-2l.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge Remote Shotgunning&body=Check out the StoneAge Striker remote shotgunning system for automated surface preparation:  http://stoneagetools.com/waterblast-automation/striker-remote-shotgunning.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
         </div>
 
-        <p class="product-description">The StoneAge AutoBox ABX-2L is an automated system for “hands-free” heat exchanger tube cleaning applications. It is designed with an emphasis on safety, ease of setup, portability and reliability. When paired with StoneAge Banshee rotary tube cleaning nozzles and lightweight positioner, the AutoBox ABX-2L offers safe and efficient tube cleaning in the harshest exchanger environments.</p>
+        <p class="product-description">The Striker SKR-100 is the industry’s first commercially available portable remote shotgun system. The Striker is an automated system designed for hands-free shotgun
+          applications with an emphasis on safety, usability, and easy assembly.</p>
+        <p>The Striker combines a rotary shotgun arm and positioning
+system for accuracy and has optional scaffold mounts for
+mounting flexibility.</p>
 
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
           <div class="panel panel-default">
@@ -145,13 +145,11 @@
             <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
                 <ul>
-                  <li>Lightweight, modular design for single operator use</li>
-                  <li>Quick-swap rollers can be changed without tools to
-accommodate hose sizes from 3-8mm</li>
-                  <li>Remotely adjustable hose clamp pressure allows operator
-to adapt to changing conditions and minimize hose wear</li>
-                  <li>All components are high quality stainless steel, aluminum
-or plastic to withstand corrosive environments</li>
+                  <li>Modular system designed for portability and easy assembly</li>
+                  <li>Lightweight components for single operator setup and use</li>
+                  <li>Wheeled base for easy maneuverability</li>
+                  <li>Ergonomic control box offers intuitive remote operation</li>
+                  <li>Affordable alternative to complicated robotic systems</li>
                 </ul>
               </div>
             </div>
@@ -170,45 +168,26 @@ or plastic to withstand corrosive environments</li>
                 <tbody>
                   <tr>
                     <th>Tool Family</th>
-                    <td colspan="2">AutoBox</td>
+                    <td colspan="2">Striker</td>
                   </tr>
                   <tr>
                     <th>Tool Model</th>
-                    <td colspan="2">ABX-2L</td>
+                    <td colspan="2">SKR-100</td>
                   </tr>
                   <tr>
-                    <th>Hose Size</th>
-                    <td colspan="2">3/2-8/4</td>
+                    <th>Cleaning Window Dimensions</th>
+                    <td>52 in. H x 84 in. W x 52 in. D</td>
+                    <td class="metric">132 cm x 213 cm x 132 cm</td>
                   </tr>
                   <tr>
-                    <th>Hose Feed Rate</th>
-                    <td>0.2–3.0 ft/sec</td>
-                    <td><span class="metric">0.06–0.9 m/sec</span></td>
-                  </tr>
-                  <tr>
-                    <th>Push/Pull Force</th>
-                    <td>10–60 lb</td>
-                    <td><span class="metric">4.5–27 kg</span></td>
-                  </tr>
-                  <tr>
-                    <th>Pitch Adjustment</th>
-                    <td>0.6–2.5 in.</td>
-                    <td><span class="metric">15–64 mm</span></td>
-                  </tr>
-                  <tr>
-                    <th>Maximum Air Pressure</th>
-                    <td>100 psi</td>
-                    <td><span class="metric">6.9 bar</spam></td>
-                  </tr>
-                  <tr>
-                    <th>Dimensions</th>
-                    <td> 8.3 x 16.7 x 7.2 in.</td>
-                    <td><span class="metric">211 x 424 x 183 mm</span></td>
+                    <th>Reaction Force</th>
+                    <td>Up to 70 lbs</td>
+                    <td><span class="metric">32 kg</span></td>
                   </tr>
                   <tr>
                     <th>Weight</th>
-                    <td>42 lbs</td>
-                    <td><span class="metric">19 kg</span></td>
+                    <td>260 lbs</td>
+                    <td><span class="metric">118 kg</span></td>
                   </tr>
                 </tbody>
                 </table>
@@ -226,10 +205,10 @@ or plastic to withstand corrosive environments</li>
             <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
                 <div class="col-sm-6">
-                  <iframe width="220" height="120" src="https://www.youtube.com/embed/jCTBlGM324Q" frameborder="0" allowfullscreen></iframe><p class="caption">ABX-2L Overview Video</p>
+                  <iframe width="220" height="120" src="https://www.youtube.com/embed/EcVIT-LdfYg" frameborder="0" allowfullscreen></iframe><p class="caption">Striker SKR-100 Overview Video</p>
                 </div>
                 <div class="col-sm-6">
-                    <iframe width="220" height="120" src="https://www.youtube.com/embed/G8x8qTNmc7Q" frameborder="0" allowfullscreen></iframe><p class="caption">ABX-2L Training Video</p>
+                    <iframe width="220" height="120" src="https://www.youtube.com/embed/9JqQyDoHzFY" frameborder="0" allowfullscreen></iframe><p class="caption">Striker vs. Watermelon</p>
                 </div>
               </div>
             </div>
@@ -245,11 +224,8 @@ or plastic to withstand corrosive environments</li>
             <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
               <div class="panel-body">
                 <ul>
-                  <li><a href="#"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L Data Sheet</a></li>
-                  <li><a href="#"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L User Manual (6mm)</a></li>
-                  <li><a href="#"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L User Manual (8mm)</a></li>
-                  <li><a href="#"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L Upgrade Guide (6mm to 8mm)</a></li>
-                  <li><a href="#"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L Parts Breakdown</a></li>
+                  <li><a href="../assets/pdf/striker_data_sheet.pdf"><i class="fa fa-file-text-o"></i> &nbsp;Striker SKR-100 Data Sheet</a></li>
+                  <li><a href="#"><i class="fa fa-file-text-o"></i> &nbsp;Striker SKR-100 User Manual</a></li>
                 </ul>
                 <p><strong>Our expert staff is available Monday through Friday 8:AM - 5:PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
                 <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
@@ -258,7 +234,7 @@ or plastic to withstand corrosive environments</li>
           </div><!-- end tab -->
         </div><!-- end accordion -->
         
-        <a href="#" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
+        <a href="../contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
         
     </div>
     <!-- End Product Info -->
@@ -274,12 +250,12 @@ or plastic to withstand corrosive environments</li>
     </div>
     <div class="row row-centered">
         <div class="col-sm-2 col-centered">
-          <a href="#"><img class="img-responsive" src="../assets/img/thumb/thumb-positioner-01.jpg" alt="Indexing positioner for heat exchanger tube cleaning">
-          <h5>Lightweight Positioner</h5></a>
+          <a href="#"><img class="img-responsive" src="../assets/img/thumb/barracuda-01.png" alt="Barracuda rotary shotgun tools for hydroblasting">
+          <h5>Barracuda Rotary Shotgun Tools</h5></a>
         </div>
         <div class="col-sm-2 col-centered">
-          <a href="#"><img class="img-responsive" src="../assets/img/thumb/thumb-banshee-01.jpg" alt="Banshee rotary tube cleaners">
-          <h5>Banshee Rotary Tools</h5></a>
+          <a href="#"><img class="img-responsive" src="../assets/img/thumb/spitfire-01.png" alt="Spitfire rotary shotgun tools for hydroblasting">
+          <h5>Spitfire Rotary Shotgun Tools</h5></a>
         </div>
       </div>
     </div>
@@ -291,8 +267,10 @@ or plastic to withstand corrosive environments</li>
     <div class="container padding-tb-30">
       <div class="col-md-7">
 
-          <h2>Productive automated cleaning of heat exchanger and evaporator tubes</h2>
-          <p>When paired with StoneAge Banshee rotary tube cleaning nozzles and lightweight positioner, the AutoBox ABX-2L offers safe and efficient tube cleaning in the harshest exchanger environments.</p>
+          <h2>Hands Free Waterblasting for Surface Praparation</h2>
+          <p>The Striker combines a rotary shotgun arm and positioning
+system for accuracy and has optional scaffold mounts for
+mounting flexibility.</p>
       </div>
       <div class="col-md-4 col-md-offset-1">
         <table>
@@ -321,19 +299,21 @@ or plastic to withstand corrosive environments</li>
         <div class="item active">
           <div class="insight">
             <img src="../assets/img/quote.png" alt="quote" class="quote" />
-            <p>The ABX-2L is the most versatile and reliable flex lancing system we've ever used.</p>
-            <p class="signed">-Doug McGee,<br/>Evergreen Environmental Services</p>
+            <p>The Striker worked great clearing hardened plastic polymer from piping equipment and allowed us to go 100% automated.</p>
+            <p class="signed">-James Schafer,<br/>Debusk Services Group</p>
           </div>
-          <img src="../assets/img/sliders/abx-2l-operator.jpg" alt="ABX-2L cleaning small tube exchanger">
+          <img src="../assets/img/sliders/striker-hero-01.jpg" alt="Striker remote automated shotgun cleaning">
         </div>
 
         <div class="item">
+<!--
           <div class="insight">
             <img src="../assets/img/quote.png" alt="quote" class="quote" />
             <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
             <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
           </div>
-          <img src="../assets/img/sliders/abx-2l-big-exchanger.jpg" alt="...">
+-->
+          <img src="../assets/img/sliders/striker-big.jpg" alt="Striker remote automated shotgun cleaning">
         </div>
 
       </div><!-- End wrapper -->
