--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -307,10 +307,10 @@
     </div>
   </footer>
 
-  <div class="row copyright">
+  <div class="fluid-container copyright">
     <div class="container">
       <div class="col-md-11">
-        <p>2015 &copy; All Rights Reserved. <a href="#">Patents &amp; Trademarks</a> | <a href="#">Terms of Sale</a>
+        <p>2015 &copy; All Rights Reserved. <a href="stoneage-patents.html">Patents</a> | <a href="#">Trademarks</a> | <a href="#">Terms</a>
         </p>
       </div>
       <div class="col-md-1">
