--- a/contact.html
+++ b/contact.html
@@ -992,7 +992,7 @@
   <div class="fluid-container copyright">
     <div class="container">
       <div class="col-md-11">
-        <p>2015 &copy; All Rights Reserved. <a href="#">Patents &amp; Trademarks</a> | <a href="#">Terms of Sale</a>
+        <p>2015 &copy; All Rights Reserved. <a href="stoneage-patents.html">Patents</a> | <a href="#">Trademarks</a> | <a href="#">Terms</a>
         </p>
       </div>
       <div class="col-md-1">
